--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <div class="field">
                 <label>ISBN Number</label>
-                <input type="number" value="" id="ISBN" placeholder="ISBN" />
+                <input type="text" value="" id="ISBN" placeholder="ISBN" />
             </div>
 
             <button class=" fluid ui primary button" type="submit">Add Book</button>
