--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/semantic.min.css">
     </link>
 
-    <title>Books Shelf</title>
+    <title>The Books Shelf</title>
 </head>
 
 <body style="margin-top: 40px;">
@@ -31,7 +31,7 @@
             <div class="field">
                 <label>ISBN Number</label>
                 <input type="text" value="" id="ISBN" placeholder="ISBN" />
-            </div>
+            </div>d
 
             <button class=" fluid ui primary button" type="submit">Add Book</button>
         </form>
