--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="field">
                 <label>ISBN Number</label>
                 <input type="text" value="" id="ISBN" placeholder="ISBN" />
-            </div>d
+            </div>
 
             <button class=" fluid ui primary button" type="submit">Add Book</button>
         </form>
